--- a/templates/partials/footer.ejs
+++ b/templates/partials/footer.ejs
@@ -1,12 +1,23 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>footer</h1>
-</body>
-</html>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+  integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+  crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+<footer style="color:white ;">
+    <ul class="nav justify-content-center" style="font-size:25px;">
+        <li class="nav-item"><a target="_blank" href="/"
+            class="nav-link px-2  mx-3"><i class="fa-brands fa-instagram"></i></a>
+        </li>
+        <li class="nav-item"><a target="_blank" href="/"
+            class="nav-link px-2 mx-3"><i class="fa-brands fa-facebook-f"></i></a>
+        </li>
+        <li class="nav-item"><a href="/" class="nav-link px-2  mx-3"><i class="fa-brands fa-twitter"></i></a></li>
+      </ul>
+    <ul class="nav justify-content-center border-bottom mb-3">
+        <li class="active"><a href="/" class="nav-link px-2 ">Home</a></li>
+        <li><a href="#about" class="nav-link px-2 ">About Us</a></li>
+        <li><a href="/events" class="nav-link px-2 ">Events</a></li>
+        <li><a href="/OurTeam" class="nav-link px-2 ">OurTeam</a></li>
+        <li><a href="/Gallery" class="nav-link px-2 ">Gallery</a></li>
+    </ul>
+    <p class="text-center">Nirmaan-Club</p>
+  </footer>
