team-page ready

--- a/templates/partials/footer.ejs
+++ b/templates/partials/footer.ejs
@@ -3,21 +3,21 @@
   crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 <footer style="color:white ;">
-    <ul class="nav justify-content-center" style="font-size:25px;">
-        <li class="nav-item"><a target="_blank" href="/"
-            class="nav-link px-2  mx-3"><i class="fa-brands fa-instagram"></i></a>
-        </li>
-        <li class="nav-item"><a target="_blank" href="/"
-            class="nav-link px-2 mx-3"><i class="fa-brands fa-facebook-f"></i></a>
-        </li>
-        <li class="nav-item"><a href="/" class="nav-link px-2  mx-3"><i class="fa-brands fa-twitter"></i></a></li>
-      </ul>
-    <ul class="nav justify-content-center border-bottom mb-3">
-        <li class="active"><a href="/" class="nav-link px-2 ">Home</a></li>
-        <li><a href="#about" class="nav-link px-2 ">About Us</a></li>
-        <li><a href="/events" class="nav-link px-2 ">Events</a></li>
-        <li><a href="/OurTeam" class="nav-link px-2 ">OurTeam</a></li>
-        <li><a href="/Gallery" class="nav-link px-2 ">Gallery</a></li>
-    </ul>
-    <p class="text-center">Nirmaan-Club</p>
-  </footer>
+  <ul class="nav justify-content-center" style="font-size:25px;">
+    <li class="nav-item"><a target="_blank" href="/" class="nav-link px-2  mx-3"><i
+          class="fa-brands fa-instagram"></i></a>
+    </li>
+    <li class="nav-item"><a target="_blank" href="/" class="nav-link px-2 mx-3"><i
+          class="fa-brands fa-facebook-f"></i></a>
+    </li>
+    <li class="nav-item"><a href="/" class="nav-link px-2  mx-3"><i class="fa-brands fa-twitter"></i></a></li>
+  </ul>
+  <ul class="nav justify-content-center border-bottom mb-3">
+    <li class="active"><a href="/" class="nav-link px-2 ">Home</a></li>
+    <li><a href="#about" class="nav-link px-2 ">About Us</a></li>
+    <li><a href="/events" class="nav-link px-2 ">Events</a></li>
+    <li><a href="/OurTeam" class="nav-link px-2 ">OurTeam</a></li>
+    <li><a href="/Gallery" class="nav-link px-2 ">Gallery</a></li>
+  </ul>
+  <p class="text-center">Nirmaan-Club</p>
+</footer>
