--- a/templates/partials/navbar.ejs
+++ b/templates/partials/navbar.ejs
@@ -13,7 +13,7 @@
       <div class="d-flex align-items-center">
         <div class="site-logo">
           <a href="/">
-            <img src="images/logo.png" alt="Nirmaan logo">
+            <img src="" alt="Nirmaan logo">
           </a>
         </div>
         <!-- changed -->
