--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -19,6 +19,7 @@
         <%- include("partials/navbar.ejs") %>
     </div>
 
+    <h1>this is home page</h1>
 
     <div class="footerposition" style="position:absolute; bottom :0px; width: 100%; background-color: black;">
         <%- include("partials/footer.ejs") %>
