--- a/templates/partials/navbar.ejs
+++ b/templates/partials/navbar.ejs
@@ -24,7 +24,7 @@
               <li><a href="#about" class="nav-link">About Us</a></li>
               <li><a href="/events" class="nav-link">Events</a></li>
               <li><a href="/OurTeam" class="nav-link">OurTeam</a></li>
-              <li><a href="/Gallery" class="nav-link">Gallery</a></li>
+              <li><a href="/gallery" class="nav-link">Gallery</a></li>
             </ul>
           </nav>
           <!-- changed -->
