--- a/templates/gallery.ejs
+++ b/templates/gallery.ejs
@@ -16,11 +16,11 @@
 </head>
 
 <body>
-    <div class="navbarposition" style="position:absolute; top :0px; width: 100%; background-color: black;">
+    <div class="navbarposition">
         <%- include("partials/navbar.ejs") %>
     </div>
     <div class="cont">
-        <div>
+        <div style="text-align: center;">
             <h1>
                 NIRMAAN GALLERY
             </h1>
@@ -53,8 +53,6 @@
     <div class="footerposition" style="position:absolute; width: 100%; background-color: black;">
         <%- include("partials/footer.ejs") %>
     </div>
-
-    <!-- <script src="/js/style.js"></script> -->
 </body>
 
 </html>
