--- a/static/css/gallery.css
+++ b/static/css/gallery.css
@@ -34,7 +34,7 @@ hr {
     cursor: pointer;
     box-shadow: 0 6px 10px rgba(0, 0, 0, .08), 0 0 6px rgba(0, 0, 0, .05);
     transition: .3s transform cubic-bezier(.155, 1.105, .295, 1.12), .3s box-shadow, .3s -webkit-transform cubic-bezier(.155, 1.105, .295, 1.12);
-    margin: 10px;
+    margin: 20px;
 
 }
 
@@ -46,4 +46,5 @@ hr {
     opacity: 1 !important;
     transform: scale(1.05);
     box-shadow: 0 10px 20px rgba(0, 0, 0, .12), 0 4px 8px rgba(0, 0, 0, .06);
+    transition: all 0.8s ease ;
 }
