--- a/templates/events.ejs
+++ b/templates/events.ejs
@@ -8,140 +8,92 @@
     <title>Nirmaan-Club||Events</title>
     <!-- linking main styling file -->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="fonts/icomoon/style.css">
     <link rel="stylesheet" href="/css/bootstrap/bootstrap.css">
     <link rel="stylesheet" href="/css/jquery-ui.css">
     <link rel="stylesheet" href="/css/jquery.fancybox.min.css">
+    <link rel="stylesheet" href="/css/events.css">
     <link rel="stylesheet" href="/css/style.css">
 </head>
 
-<style>
-    .cont {
-        margin: 20px 0px;
-        min-height: 65.2vh;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .conti {
-        width: 90%;
-        margin: 20px auto;
-        display: flex;
-        flex-direction: column;
-
-    }
-
-    .conti .image {
-        position: absolute;
-        width: 90%;
-        left: 5%;
-        right: 5%;
-        height: 500px;
-        z-index: -1;
-    }
-
-    .image img {
-        width: 100%;
-        height: 100%;
-        opacity: 0.9;
-    }
-
-    .about {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        width: 40%;
-        color: black;
-        opacity: 0;
-        transform: translateX(-700px);
-        transition: all 1s ease;
-        z-index: 1;
-        height: 500px;
-        background-color: rgba(0, 0, 0, 0.34);
-    }
-
-    .conti:hover .about {
-        transform: translateX(0px);
-        opacity: 1;
-        transition: all 1 ease;
-    }
-
-
-    .about h1,
-    h5 {
-        margin: 10px;
-
-    }
-
-    .hr {
-        border: 1px solid black;
-        width: 70%;
-    }
-
-    .title {
-        margin-top: 50px;
-    }
-</style>
-
 <body>
-    <div class="navbarposition"
-        style="position: relative;top:0px; left:0px;right: 0px; width: 100%; background-color: black;">
-        <%- include("partials/navbar.ejs") %>
+    <div class="site-warp">
+        <div class="navbarposition">
+            <%- include("partials/navbar.ejs") %>
+        </div>
+        <div class="container">
+            <% for(let i=0;i<10;i++){%>
+                <div class="item">
+                    <h1 class="section">Title</h1>
+                    <hr style="width:65% ; margin:30px auto;background-color:black; height: 2px;">
+                    <div>
+                        <div class="event">
+                            <div class="imgbx">
+                                <img src="https://static.remove.bg/remove-bg-web/ea3c274e1b7f6fbbfe93fad8b2b13d7ef352f09c/assets/start-1abfb4fe2980eabfbbaaa4365a0692539f7cd2725f324f904565a9a744f8e214.jpg"
+                                    alt="">
+                            </div>
+                            <div class="about">
+                                <div class="title">
+                                    <h2>title</h2>
+                                </div>
+                                <div class="info">
+                                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit, inventore iure.
+                                Architecto
+                                quo
+                                repellendus deleniti culpa impedit corrupti eum exercitationem quidem earum quae
+                                pariatur
+                                odit
+                                magnam beatae, nulla necessitatibus ratione.
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <%}%>
+
+
+        </div>
+        <div class="footerposition" style="position:absolute; width: 100%; background-color: black;">
+            <%- include("partials/footer.ejs") %>
+        </div>
     </div>
+    <script>
 
-    <div class="cont">
-        <div class="title">
-            <h1 style="color:black ;">Title</h1>
-        </div>
+        let observer = new IntersectionObserver((entries) => {
+          entries.forEach((element) => {
+            if (element.isIntersecting) {
+                element.target.parentElement.lastElementChild.style.opacity = "1";
+                if(window.innerWidth>850){
+                    element.target.parentElement.lastElementChild.style.transform = "translateX(0px)";
+                }
+                else{
+                    element.target.parentElement.lastElementChild.style.transform = "translateY(-250px)";
+                }
+                element.target.parentElement.lastElementChild.style.transition = "all 1s ease";
+            }
+            else {
+                element.target.parentElement.lastElementChild.style.opacity = "0";
+                if(window.innerWidth>850){
+                    element.target.parentElement.lastElementChild.style.transform = "translateX(-350px)";
+                }
+                else{
+                    element.target.parentElement.lastElementChild.style.transform = "translateY(-550px)";
+                }
+                // element.target.parentElement.lastElementChild.style.transform = "translateX(-350px)";
+                element.target.parentElement.lastElementChild.style.transition = "all 0.5s ease";
 
-        <div class="hr">
-
-        </div>
-        <div class="conti">
-            
-            <div class="image">
-                <img src="https://static.remove.bg/remove-bg-web/ea3c274e1b7f6fbbfe93fad8b2b13d7ef352f09c/assets/start-1abfb4fe2980eabfbbaaa4365a0692539f7cd2725f324f904565a9a744f8e214.jpg"
-                    alt="">
-            </div>
-            <div class="about">
-                <h1 style="color:black">TITLE</h1>
-                <h5 style="color:black ;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex, omnis. Minima
-                    maiores asperiores ex totam voluptate quam atque illum, autem recusandae debitis odit ab possimus
-                    beatae optio at, neque sit expedita error aperiam sequi .</h5>
-            </div>
-        </div>
-        <div class="conti">
-
-            <div class="image">
-                <img src="https://static.remove.bg/remove-bg-web/ea3c274e1b7f6fbbfe93fad8b2b13d7ef352f09c/assets/start-1abfb4fe2980eabfbbaaa4365a0692539f7cd2725f324f904565a9a744f8e214.jpg"
-                    alt="">
-            </div>
-            <div class="about">
-                <h1 style="color:black">TITLE</h1>
-                <h5 style="color:black ;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex, omnis. Minima
-                    maiores asperiores ex totam voluptate quam atque illum, autem recusandae debitis odit ab possimus
-                    beatae optio at, neque sit expedita error aperiam sequi .</h5>
-            </div>
-        </div>
-
-
-    </div>
-    <div class="footerposition" style=" background-color: black;">
-        <%- include("partials/footer.ejs") %>
-    </div>
-
-    <script src="/js/style.js"></script>
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
-        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
-        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-        crossorigin="anonymous"></script>
+              
+            }
+          })
+        });
+  
+        const item = document.getElementsByClassName('event');
+        // item[0].parentElement.lastElementChild.lastElementChild
+        for (let i = 0; i < item.length; i++) {
+          observer.observe(item[i].firstElementChild)
+        }
+      </script>
 </body>
 
 </html>
