--- a/templates/partials/navbar.ejs
+++ b/templates/partials/navbar.ejs
@@ -1,37 +1,83 @@
-<div class="site-mobile-menu site-navbar-target">
-    <div class="site-mobile-menu-header">
-      <div class="site-mobile-menu-close">
-        <span class="icon-close2 js-menu-toggle"></span>
-      </div>
-    </div>
-    <div class="site-mobile-menu-body"></div>
+<style>
+  .collapse {
+    position: absolute;
+    right: 50px;
+    width: 70%;
+  }
+
+  .navbar-brand {
+    margin: 0px 50px;
+  }
+
+  .navbar-dark .navbar-toggler {
+    border: 0
+  }
+
+  .line {
+    width: 20px;
+    height: 2px;
+    background-color: white;
+    margin-top: 3px;
+  }
+
+  .navbar-collapse {
+    justify-content: flex-end;
+  }
+
+  .navitem {
+    margin: 0px 5px;
+    border-radius: 0px;
+    transition: all 0s;
+  }
+
+  .navitem:hover {
+    background-color: yellow;
+    color: black !important;
+    border-radius: 10px;
+    transition: all 0s;
+  }
+
+  @media only screen and (max-width:992px) {
+    .collapse {
+      position: unset;
+    }
+
+    .navbar-brand {
+      margin: unset;
+    }
+    .navitem{
+      width: 25%;
+      text-align: center;
+    }
+    .navitem:hover {
+      background-color: yellow;
+      color: black !important;
+      border-radius: 10px;
+      transition: all 0s;
+    }
+  }
+
+  .navbar {
+    padding: 17px;
+  }
+</style>
+
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <a class="navbar-brand" href="/"><img src="" alt="Nirmaan-Logo"></a>
+  <div class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+    aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+    <div class="line"></div>
+    <div class="line"></div>
+    <div class="line"></div>
   </div>
-
-  <!-- changed -->
-  <header id="navbar" class="site-navbar py-3 " role="banner">
-    <div class="container">
-      <div class="d-flex align-items-center">
-        <div class="site-logo">
-          <a href="/">
-            <img src="" alt="Nirmaan logo">
-          </a>
-        </div>
-        <!-- changed -->
-        <div class="ml-auto">
-          <nav class="site-navigation text-right " role="navigation">
-            <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
-              <li><a href="/" class="nav-link">Home</a></li>
-              <li><a href="#about" class="nav-link">About Us</a></li>
-              <li><a href="/events" class="nav-link">Events</a></li>
-              <li><a href="/OurTeam" class="nav-link">OurTeam</a></li>
-              <li><a href="/gallery" class="nav-link">Gallery</a></li>
-            </ul>
-          </nav>
-          <!-- changed -->
-          <a href="#" class="d-inline-block d-lg-none site-menu-toggle js-menu-toggle text-black float-right text-white"><span
-              class="icon-menu h3 text-white"></span></a>
-        </div>
-      </div>
+  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+    <div class="navbar-nav">
+      <a class=" navitem  nav-link" href="/">Home </a>
+      <a class=" navitem nav-link" href="/#about">About Us</a>
+      <a class=" navitem nav-link" href="/#contact">Contact</a>
+      <a class=" navitem nav-link" href="/gallery">Gallery</a>
+      <a class=" navitem nav-link" href="/events/">Events</a>
+      <a class=" navitem nav-link" href="/ourteam">OurTeam</a>
     </div>
-
-  </header>
+  </div>
+</nav>
