--- a/static/css/ourteam.css
+++ b/static/css/ourteam.css
@@ -1,7 +1,8 @@
 .cont {
     min-height: 65.2vh;
     width: 80%;
-    margin: 50px auto;
+    margin: 0px auto;
+    padding: 50px 0px;
     display: flex;
     align-items: center;
     justify-content: center;
