--- a/templates/events.ejs
+++ b/templates/events.ejs
@@ -16,17 +16,23 @@
     <link rel="stylesheet" href="/css/events.css">
     <link rel="stylesheet" href="/css/style.css">
 </head>
-
+    <style>
+        body{
+            background: url('https://t4.ftcdn.net/jpg/01/10/14/93/240_F_110149329_REv7wpM5M1ObcmS9sJhi1D2jOWa6jxM1.jpg') no-repeat center center/cover;
+            background-attachment: fixed;
+        }
+    </style>
 <body>
-    <div class="site-warp">
-        <div class="navbarposition">
-            <%- include("partials/navbar.ejs") %>
-        </div>
+    <div class="navbarposition" style="background-color:black ;">
+        <%- include("partials/navbar.ejs") %>
+    </div>
+    <div class="site-warp" style="width: 100% ;height:auto; background-color:rgb(0,0,0,0.3)">
         <div class="container">
             <% for(let i=0;i<10;i++){%>
-                <div class="item">
-                    <h1 class="section">Title</h1>
-                    <hr style="width:65% ; margin:30px auto;background-color:black; height: 2px;">
+                <div class="item"><br>
+                    <h1 class="section">TITLE</h1>
+                    <!-- <hr style="width:65% ; margin:30px auto;background-color:black; height: 2px;"> -->
+                    <br>
                     <div>
                         <div class="event">
                             <div class="imgbx">
@@ -39,12 +45,12 @@
                                 </div>
                                 <div class="info">
                                     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit, inventore iure.
-                                Architecto
-                                quo
-                                repellendus deleniti culpa impedit corrupti eum exercitationem quidem earum quae
-                                pariatur
-                                odit
-                                magnam beatae, nulla necessitatibus ratione.
+                                    Architecto
+                                    quo
+                                    repellendus deleniti culpa impedit corrupti eum exercitationem quidem earum quae
+                                    pariatur
+                                    odit
+                                    magnam beatae, nulla necessitatibus ratione.
                                 </div>
                             </div>
                         </div>
@@ -61,39 +67,39 @@
     <script>
 
         let observer = new IntersectionObserver((entries) => {
-          entries.forEach((element) => {
-            if (element.isIntersecting) {
-                element.target.parentElement.lastElementChild.style.opacity = "1";
-                if(window.innerWidth>850){
-                    element.target.parentElement.lastElementChild.style.transform = "translateX(0px)";
+            entries.forEach((element) => {
+                if (element.isIntersecting) {
+                    element.target.parentElement.lastElementChild.style.opacity = "1";
+                    if (window.innerWidth > 850) {
+                        element.target.parentElement.lastElementChild.style.transform = "translateX(0px)";
+                    }
+                    else {
+                        element.target.parentElement.lastElementChild.style.transform = "translateY(-250px)";
+                    }
+                    element.target.parentElement.lastElementChild.style.transition = "all 1s ease";
                 }
-                else{
-                    element.target.parentElement.lastElementChild.style.transform = "translateY(-250px)";
-                }
-                element.target.parentElement.lastElementChild.style.transition = "all 1s ease";
-            }
-            else {
-                element.target.parentElement.lastElementChild.style.opacity = "0";
-                if(window.innerWidth>850){
-                    element.target.parentElement.lastElementChild.style.transform = "translateX(-350px)";
-                }
-                else{
-                    element.target.parentElement.lastElementChild.style.transform = "translateY(-550px)";
-                }
-                // element.target.parentElement.lastElementChild.style.transform = "translateX(-350px)";
-                element.target.parentElement.lastElementChild.style.transition = "all 0.5s ease";
+                else {
+                    element.target.parentElement.lastElementChild.style.opacity = "0";
+                    if (window.innerWidth > 850) {
+                        element.target.parentElement.lastElementChild.style.transform = "translateX(-350px)";
+                    }
+                    else {
+                        element.target.parentElement.lastElementChild.style.transform = "translateY(-550px)";
+                    }
+                    // element.target.parentElement.lastElementChild.style.transform = "translateX(-350px)";
+                    element.target.parentElement.lastElementChild.style.transition = "all 0.5s ease";
 
-              
-            }
-          })
+
+                }
+            })
         });
-  
+
         const item = document.getElementsByClassName('event');
         // item[0].parentElement.lastElementChild.lastElementChild
         for (let i = 0; i < item.length; i++) {
-          observer.observe(item[i].firstElementChild)
+            observer.observe(item[i].firstElementChild)
         }
-      </script>
+    </script>
 </body>
 
 </html>
