--- a/templates/partials/navbar.ejs
+++ b/templates/partials/navbar.ejs
@@ -62,7 +62,7 @@
   }
 </style>
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg ">
   <a class="navbar-brand" href="/"><img src="" alt="Nirmaan-Logo"></a>
   <div class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
     aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
