main-page-strated

--- a/templates/gallery.ejs
+++ b/templates/gallery.ejs
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <div class="navbarposition">
+    <div class="navbarposition" style="background-color:black ;">
         <%- include("partials/navbar.ejs") %>
     </div>
     <div class="cont">
