--- a/templates/partials/navbar.ejs
+++ b/templates/partials/navbar.ejs
@@ -74,10 +74,11 @@
     <div class="navbar-nav">
       <a class=" navitem  nav-link" href="/">Home </a>
       <a class=" navitem nav-link" href="/#about">About Us</a>
-      <a class=" navitem nav-link" href="/#contact">Contact</a>
       <a class=" navitem nav-link" href="/gallery">Gallery</a>
       <a class=" navitem nav-link" href="/events/">Events</a>
       <a class=" navitem nav-link" href="/ourteam">OurTeam</a>
+      <a class=" navitem nav-link" href="/#fest">Fest&nbsp;&nbsp;</a>
+      <a class=" navitem nav-link" href="/#contact">Contact</a>
     </div>
   </div>
 </nav>
