--- a/static/css/events.css
+++ b/static/css/events.css
@@ -31,7 +31,7 @@ body {
 .section {
     text-align: center;
     margin-top: 3rem;
-    color: rgb(0,0,0);
+    color: rgb(255, 255, 255);
 }
 
 .item{
