--- a/templates/events.ejs
+++ b/templates/events.ejs
@@ -16,44 +16,45 @@
     <link rel="stylesheet" href="/css/events.css">
     <link rel="stylesheet" href="/css/style.css">
 </head>
-    <style>
-        body{
-            background: url('https://t4.ftcdn.net/jpg/01/10/14/93/240_F_110149329_REv7wpM5M1ObcmS9sJhi1D2jOWa6jxM1.jpg') no-repeat center center/cover;
-            background-attachment: fixed;
-        }
-    </style>
+<style>
+    body {
+        background: url('https://t4.ftcdn.net/jpg/01/10/14/93/240_F_110149329_REv7wpM5M1ObcmS9sJhi1D2jOWa6jxM1.jpg') no-repeat center center/cover;
+        background-attachment: fixed;
+    }
+</style>
+
 <body>
     <div class="navbarposition" style="background-color:black ;">
         <%- include("partials/navbar.ejs") %>
     </div>
     <div class="site-warp" style="width: 100% ;height:auto; background-color:rgb(0,0,0,0.3)">
         <div class="container">
-            <% for(let i=0;i<10;i++){%>
+            <% for(Event in event ){%>
                 <div class="item"><br>
-                    <h1 class="section">TITLE</h1>
-                    <!-- <hr style="width:65% ; margin:30px auto;background-color:black; height: 2px;"> -->
+                    <h1 class="section">
+                        <br><br>
+                        <%=Event%>
+
+                    </h1>
                     <br>
                     <div>
+                    <% for(let i=0;i<event[Event].length;i++){%>
                         <div class="event">
                             <div class="imgbx">
-                                <img src="https://static.remove.bg/remove-bg-web/ea3c274e1b7f6fbbfe93fad8b2b13d7ef352f09c/assets/start-1abfb4fe2980eabfbbaaa4365a0692539f7cd2725f324f904565a9a744f8e214.jpg"
+                                <img src="<%=event[Event][i].image%>"
                                     alt="">
                             </div>
                             <div class="about">
                                 <div class="title">
-                                    <h2>title</h2>
+                                    <h2><%=event[Event][i].name%></h2>
                                 </div>
                                 <div class="info">
-                                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit, inventore iure.
-                                    Architecto
-                                    quo
-                                    repellendus deleniti culpa impedit corrupti eum exercitationem quidem earum quae
-                                    pariatur
-                                    odit
-                                    magnam beatae, nulla necessitatibus ratione.
+                                    <%=event[Event][i].about%>
                                 </div>
                             </div>
                         </div>
+                        <%}%>    
+                        
                     </div>
                 </div>
                 <%}%>
