--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="/css/index.css">
 </head>
 <body>
-    <div class="navbarposition" style="width: 100%; background-color: rgba(0, 0, 0, 1);">
+    <div class="navbarposition" style="width: 100%; background-color: rgb(0, 0, 0)");>
         <%- include("partials/navbar.ejs") %>
     </div>
 
@@ -74,8 +74,6 @@
                         element.target.firstElementChild.style.transform = "translateY(-100vh)";
                     }
                     element.target.firstElementChild.style.transition = "all 0.5s ease";
-
-
                 }
             })
         });
