--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,7 +1,8 @@
-body{
+body {
     min-height: 100vh;
 }
-.info{
+
+.info {
     color: rgb(255, 255, 255);
     z-index: 1;
     width: 30%;
@@ -13,17 +14,20 @@ body{
     transition: all 0.8s ease;
     background-color: rgba(0, 0, 0, 0.5);
 }
-.info p{
-    margin: 0px 20px;
+
+.info p {
+    margin: 0px 30px;
     font-size: 15px;
 }
-.conti{
+
+.conti {
     display: flex;
     flex-direction: column;
     width: 100%;
-    height:100vh;
+    height: 100vh;
 }
-.image img{
+
+.image img {
     width: 100%;
     height: 100vh;
     z-index: -1;
@@ -31,18 +35,38 @@ body{
     top: 80px;
 }
 
-@media only screen and (max-width:650px){
-    .info{
+@media only screen and (max-width:800px) {
+    .info {
         width: 100% !important;
         font-size: 15px;
+        transform: translateY(315px) !important;
+        height: 256px;
+    }
+
+    .title {
+        margin: 100px auto !important;
+        justify-content: flex-start !important;
+        align-items: center !important;
+    }
+
+}
+
+@media only screen and (max-width:450px){
+    .title h1{
+        font-size: 2.3rem !important;
+    }
+    .title span{
+        font-size: 1.3rem !important;
     }
 }
-@media only screen and (max-width:900px){
-    .info{
+
+@media only screen and (max-width:900px) {
+    .info {
         width: 40%;
     }
 }
-.contact{
+
+.contact {
     width: 250px;
     height: 180px;
     display: flex;
@@ -51,11 +75,57 @@ body{
     justify-content: center;
     color: black !important;
     margin: 0px 10px;
-    border-radius:20px;
+    border-radius: 20px;
 }
-#contact{
+
+#contact {
     display: flex;
     width: 100%;
     margin: 30px auto;
     justify-content: center;
+}
+
+.title {
+    height: 100vh;
+    width: 70%;
+    margin: auto;
+    z-index: 0;
+    position: absolute;
+    left: 0;
+    right: 0;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    flex-direction: column;
+}
+
+.title h1 {
+    font-size: 4rem;
+    color: black;
+    text-transform: uppercase;
+    text-shadow: 2px 2px 10px yellow;
+}
+
+.title span {
+    color: black;
+    font-size: 2.3rem;
+    text-shadow: 2px 2px 10px yellow;
+}
+
+@media only screen and (max-width:1200px) {
+    .title h1 {
+        font-size:4rem ;
+    }
+    .title{
+        width: 80%;
+    }
+}
+@media only screen and (max-width:1000px) {
+    .title h1 {
+        font-size:3rem ;
+    }
+    .title{
+        width: 90%;
+    }
+
 }
