--- a/static/css/ourteam.css
+++ b/static/css/ourteam.css
@@ -2,7 +2,7 @@
     min-height: 65.2vh;
     width: 80%;
     margin: 0px auto;
-    padding: 50px 0px;
+    /* padding: 50px 0px; */
     display: flex;
     align-items: center;
     justify-content: center;
@@ -10,7 +10,7 @@
 }
 
 .profilecard {
-    border: 2px solid rgb(0, 0, 0);
+    /* border: 2px solid rgb(0, 0, 0); */
     height: 300px;
     width: 250px;
     margin: 10px;
@@ -20,6 +20,8 @@
     align-items: center;
     flex-direction: column;
     overflow: hidden;
+    background: white;
+    box-shadow: 0px 0px 10px grey;
 }
 
 .profilecard .circle {
@@ -112,4 +114,61 @@
     margin: 10px auto;
     background-color: black;
     border: 1px solid black;
+}
+
+.conti {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+body {
+    background: url('https://img.freepik.com/premium-vector/abstract-technology-background_41981-1248.jpg?w=2000') no-repeat center center/cover;
+    background-attachment: fixed;
+}
+
+html,
+body {
+    overflow-x: hidden;
+}
+
+.titlebox {
+    width: 130%;
+    height: 250px;
+    background-color: yellow;
+    color: black;
+    transform: skew(0deg, -3deg) translateX(-101px);
+    z-index: -1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.titlebox h1 {
+    transform: skew(-8deg, 3deg);
+    color: black;
+    margin-left: -240px;
+    font-size: 3rem;
+    margin-top: 100px;
+}
+
+.title {
+    text-transform: uppercase;
+    font-size: 2rem;
+}
+
+@media only screen and (max-width:650px) {
+    .titlebox {
+        width: 150% !important;
+    }
+
+    .titlebox h1 {
+        font-size: 35px !important;
+        margin:100px auto 0px auto !important    
+    }
+
+    .title h1 {
+        font-size: 23px;
+
+    }
 }
