--- a/templates/gallery.ejs
+++ b/templates/gallery.ejs
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <link rel="icon" href="/images/NewLogo1.png">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,23 +16,28 @@
     <link rel="stylesheet" href="/css/gallery.css">
 </head>
 
+<style>
+    body{
+        background: url('https://media.istockphoto.com/id/1336601481/photo/3d-rendering-of-infinity-symbol-road-in-adventure-route-concept.jpg?s=612x612&w=0&k=20&c=Nb8kmswDkUi5NwGw_rM_aTt-3Le6gZW5sFunPvjYUKM=') no-repeat center center/cover;
+        background-attachment: fixed;
+    }
+</style>
+
 <body>
-    <div class="navbarposition" style="background-color:black ;">
+    <div class="navbarposition" style="position: absolute;z-index: 1;width: 100%; background-color:black ;">
         <%- include("partials/navbar.ejs") %>
     </div>
     <div class="cont">
-        <div style="text-align: center;">
+        <div class="titlebox" style="text-align: center;">
             <h1>
                 NIRMAAN GALLERY
             </h1>
         </div>
-        <br>
         <!-- all events -->
         <% for(let i=0;i<3;i++){%>
             <!-- for one event -->
             <div class="event container">
                 <div class="">
-                    <br><br>
                     <h2 class="text-center">First Event</h2>
                     <br>
                 </div>
@@ -39,7 +45,7 @@
                 <div class="d-flex flex-wrap justify-content-center">
                     <!-- event images -->
                     <% for(let i=0;i<9;i++){%>
-                        <div class="img-container" style="width:300px; height:250px; opacity:0.75">
+                        <div class="img-container" style="width:300px; height:250px; ">
                             <img class="w-100 h-100"
                                 src="https://static.remove.bg/remove-bg-web/ea3c274e1b7f6fbbfe93fad8b2b13d7ef352f09c/assets/start-1abfb4fe2980eabfbbaaa4365a0692539f7cd2725f324f904565a9a744f8e214.jpg"
                                 alt="">
