--- a/templates/partials/footer.ejs
+++ b/templates/partials/footer.ejs
@@ -1,33 +1,30 @@
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
-  integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
-  crossorigin="anonymous" referrerpolicy="no-referrer" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 <footer style="color:white ;">
-  <ul class="nav justify-content-center" style="font-size:25px;">
+  <ul class="nav justify-content-center" style="font-size:30px;">
     <li class="nav-item"><a target="_blank" href="/" class="nav-link px-2  mx-3"><i
-          class="fa-brands fa-instagram"></i></a>
+          class="fa fa-instagram"></i></a>
     </li>
     <li class="nav-item"><a target="_blank" href="/" class="nav-link px-2 mx-3"><i
-          class="fa-brands fa-facebook-f"></i></a>
+          class="fa fa-facebook-f"></i></a>
     </li>
-    <li class="nav-item"><a href="/" class="nav-link px-2  mx-3"><i class="fa-brands fa-twitter"></i></a></li>
+    <li class="nav-item"><a target="_blank" href="/" class="nav-link" ><i class="fa fa-github" aria-hidden="true"></i></a></li>
+    <li class="nav-item"><a target="_blank" href="/" class="nav-link" ><i class="fa fa-wikipedia-w" aria-hidden="true"></i></a>
+    </li>
   </ul>
-  <ul class="nav justify-content-center border-bottom mb-3">
+  <!-- <ul class="nav justify-content-center mb-3" style="border-bottom:3px solid yellow ;">
     <li class="active"><a href="/" class="nav-link px-2 ">Home</a></li>
     <li><a href="#about" class="nav-link px-2 ">About Us</a></li>
     <li><a href="/events" class="nav-link px-2 ">Events</a></li>
     <li><a href="/OurTeam" class="nav-link px-2 ">OurTeam</a></li>
     <li><a href="/Gallery" class="nav-link px-2 ">Gallery</a></li>
-  </ul>
-  <p class="text-center">Nirmaan-Club</p>
+  </ul> -->
+  <p style="font-size: 20px" class="text-center">Nirmaan-Club</p>
 </footer>
 <script src="/js/style.js"></script>
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
-        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
-        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-        crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+  integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+  integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+  integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
